<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/y200"
    android:paddingLeft="@dimen/x100"
    android:paddingRight="@dimen/x100"
    android:paddingTop="@dimen/y430"
    tools:context="com.huarui.life.ui.activity.GuideActivity">

    <!--背景色-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e6e3e3" />

    <!--Title-->
    <TextView
        android:id="@+id/guide_tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y90"
        android:background="#159eed"
        android:gravity="center"
        android:text="@string/guide_tv_active"
        android:textColor="#fff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/guide_tv_title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--location-->
            <LinearLayout
                android:id="@+id/guide_ll_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/x40"
                android:paddingRight="@dimen/x40"
                android:background="#e6e3e3"
                android:gravity="center"
                android:paddingTop="@dimen/y30">

                <EditText
                    android:id="@+id/guide_et_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="@string/guide_et_location_hint"
                    android:maxLines="2" />

                <Button
                    android:id="@+id/guide_btn_location"
                    style="@style/guide_btn_style"
                    android:layout_width="0dp"
                    android:layout_marginLeft="@dimen/x8"
                    android:text="@string/guide_btn_location"
                    android:layout_weight="2" />


            </LinearLayout>

            <!--Image-->
            <RelativeLayout
                android:id="@+id/guide_rl_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/guide_ll_location"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal">

                <!--Camera-->
                <LinearLayout
                    android:id="@+id/guide_ll_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/y20"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/guide_img_camera"
                        android:layout_width="@dimen/x200"
                        android:layout_height="@dimen/y300"
                        android:background="@color/color_bg" />

                    <Button
                        android:id="@+id/guide_btn_camera"
                        style="@style/guide_btn_style"
                        android:layout_marginTop="@dimen/y20"

                        android:text="@string/guide_btn_camera" />

                </LinearLayout>

                <!--Screenshot-->
                <LinearLayout
                    android:id="@+id/guide_ll_root"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x40"
                    android:layout_marginTop="@dimen/y20"
                    android:layout_toRightOf="@+id/guide_ll_camera"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">

                    <ImageView
                        android:id="@+id/guide_img_screen"
                        android:layout_width="@dimen/x200"
                        android:layout_height="@dimen/y300"
                        android:background="@color/color_bg" />

                    <Button
                        android:id="@+id/guide_btn_root"
                        style="@style/guide_btn_style"
                        android:layout_marginTop="@dimen/y20"
                        android:text="@string/guide_btn_screen" />

                </LinearLayout>

            </RelativeLayout>

            <!--foot-->
            <RelativeLayout
                android:id="@+id/guide_rl_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/guide_rl_img"
                android:layout_marginTop="@dimen/y20">

                <!--prompt-->
                <TextView
                    android:id="@+id/guide_tv_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

            </RelativeLayout>

            <!--静态安装说明；-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/guide_rl_prompt"
                android:paddingLeft="@dimen/x100"
                android:paddingRight="@dimen/x100">

                <TextView
                    android:id="@+id/guide_tv_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#f908131b" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <!--Finish-->
    <Button
        android:id="@+id/guide_btn_finish"
        android:layout_width="@dimen/x300"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/y60"
        android:background="@drawable/guide_btn_bg"
        android:enabled="false"
        android:text="@string/guide_btn_finish"
        android:textColor="#fff"
        android:visibility="visible" />

</RelativeLayout>
